# seqan

apps/lagan/: CMakeLists.txt  generateEvents.h  lagan.cpp  laganAlignment.h  laganAlignment_impl.h  laganAlignment_impl2.h  laganAlignment_impl3.h  processEvents.h  processEvents2.h  seqCompressor.cpp  seqCompressor_base.h
apps/seqCompressor/: .directory  CMakeLists.txt  seqCompressor.cpp  seqCompressor_base.h
apps/seqCompressor/tests/: generate_outputs.sh  run_tests.py
apps/seqCompressor/tests/input/: phage_genomes.fa  prototyp_sequences.fa
apps/seqCompressor/tests/output/: small_example.stdout
apps/seqan_tcoffee/: seqan_tcoffee.cpp
core/include/seqan/find/: find_horspool.h  find_shiftand.h  find_shiftor.h
core/include/seqan/sequence/: container_view.h
demos/: dp_bench.cpp
extras/apps/gdf_tools/: CMakeLists.txt  INFO  gdf_converter.cpp  gdf_converter_selftest.h  gdf_converter_vcf.h  gdf_tools.h
extras/apps/jst_bench/: CMakeLists.txt  INFO  jst_bench.cpp  jst_bench_base.h  jst_bench_facade_header.h  jst_bench_find.h  jst_bench_io.h  jst_bench_options.h
extras/include/seqan/: find_journaled_string_tree.h
extras/include/seqan/find_journaled_string_tree/: INFO  find_extension_concept.h  find_extension_horspool.h  find_extension_myers_ukkonen.h  find_extension_pigeonhole.h  find_extension_shift_and.h  find_extension_shift_or.h  find_extension_simple.h  find_journaled_string_tree_base.h  find_journaled_string_tree_impl.h
extras/include/seqan/journaled_set/: journaled_set_impl.h
extras/include/seqan/journaled_string_tree/: delta_map.h  gdf_io_header.h  gdf_io_read.h  journaled_string_tree_impl.h  journaled_string_tree_traversal.h
extras/tests/test_find_journaled_string_tree/: CMakeLists.txt  test_find_journaled_string_tree.cpp  test_find_journaled_string_tree_compare_results.h  test_find_journaled_string_tree_horspool.h  test_find_journaled_string_tree_myers.h  test_find_journaled_string_tree_shift_and.h  test_find_journaled_string_tree_shift_or.h  test_find_journaled_string_tree_simple.h
include/seqan/: align.h
include/seqan/align/: dp_algorithm_impl.h  dp_cell.h  dp_cell_convex.h  dp_context.h  dp_formula.h  dp_formula_affine.h  dp_formula_convex.h  dp_formula_dynamic.h  dp_formula_linear.h  dp_matrix.h  dp_matrix_navigator_score_matrix.h  dp_matrix_navigator_score_matrix_sparse.h  dp_matrix_navigator_trace_matrix.h  dp_matrix_sparse.h  dp_parallel.h  dp_profile.h  dp_scout.h  dp_setup.h  dp_traceback_impl.h  matrix_base.h
include/seqan/align_extend/: align_extend.h  align_extend_base.h
include/seqan/align_split/: align_split_interface.h
include/seqan/bam_io/: bam_alignment_record_util.h  bam_index_bai.h
include/seqan/basic/: iterator_range.h  profiling.h
include/seqan/graph_msa/: graph_align_tcoffee_guidetree.h  graph_align_tcoffee_library.h  graph_align_tcoffee_msa.h
include/seqan/graph_types/: graph_drawing.h
include/seqan/score/: score_base.h
include/seqan/seeds/: banded_chain_alignment_impl.h  banded_chain_alignment_profile.h  banded_chain_alignment_traceback.h  seeds_global_chaining.h
tests/align/: test_alignment_algorithms_band_position.h  test_alignment_dp_matrix.h
tests/bam_io/: test_bam_index.h
